--- a/.github/workflows/imdb.yml
+++ b/.github/workflows/imdb.yml
@@ -2,7 +2,7 @@ name: Scrape IMDb Top 250
 
 on:
   schedule:
-    - cron: "30 6 * * *"
+    - cron: "37 6 * * *"
   workflow_dispatch:
 
 jobs:
@@ -18,14 +18,11 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         
-      - name: Install Dependencies
-        run: uv pip install httpx lxml cssselect
-
-      - name: Run scraper by 21f3002390@ds.study.iitm.ac.in
+      - name: Run scraper
         run: | # python
-          uv run python scrape.py
+          uv run --with httpx,lxml,cssselect python scrape.py
 
-      - name: Commit and push changes
+      - name: 21f3002390@ds.study.iitm.ac.in
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
